添加笔记，Linux命令

--- a/日常/乱七八糟.md
+++ b/日常/乱七八糟.md
@@ -1,1 +1,133 @@
+
+
+
+
+
+
+
+-2020年11月14日
+
+ubuntu 安装Anaconda版本
+安装方法一:
+
+官网下载地址：https://www.anaconda.com/distribution/#download-section 
+打开terminal，执行安装命令
+复制代码
+# 可以先创建一个文件夹
+mkdir Anaconda
+cd Anaconda
+
+# 安装命令，sh后面跟的就是下载好的文件
+sh /root/Downloads/Anaconda2-2019.03-Linux-x86_64.sh
+复制代码
+注册信息，输入yes；
+阅读注册信息，然后输入yes；查看文件即将安装的位置（默认路径为 /root/anaconda3，可自行修改），按enter，即可安装；
+安装完成后，收到加入环境变量的提示信息，输入yes，（默认按回车的话为no，需要手动设置环境变量）
+安装完成后重启终端就行了
+安装方法二：
+
+我们先建一个文件夹，用于安装路径
+# 安装路径为 /root/Anaconda
+cd /root
+mkdir Anaconda
+cd Anaconda
+命令行运行下载命令
+wget https://repo.anaconda.com/archive/Anaconda3-5.2.0-Linux-x86_64.sh
+命令行运行安装命令
+bash Anaconda3-5.2.0-Linux-x86_64.sh
+之后的步骤同方法一的3、4、5、6
+ 
+
+CentOS 安装 Anaconda
+先建立一个文件夹用于作为安装路径
+# 安装路径为 /root/Anaconda
+cd /root
+mkdir Anaconda
+cd Anaconda
+命令行下载 anaconda 文件，文件列表的 URL 为：https://mirrors.tuna.tsinghua.edu.cn/anaconda/archive/，根据需求自己选择一个版本（下面使用的是anaconda2版本）
+# 如果没有安装 wget 运行下面这行
+yum install wget
+
+# 下载 anaconda 文件
+wget https://mirrors.tuna.tsinghua.edu.cn/anaconda/archive/Anaconda2-5.3.1-Linux-x86_64.sh
+执行安装命令
+复制代码
+# 安装命令
+bash Anaconda2-5.3.1-Linux-x86_64.sh 
+
+'''
+如果报错
+Anaconda2-5.3.1-Linux-x86_64.sh: line 353: bunzip2: command not found
+tar: This does not look like a tar archive
+tar: Exiting with failure status due to previous errors
+由于系统缺少bunzip2包造成的，通过yum安装bzip2包来解决
+运行下面的命令
+'''
+yum install bzip2
+复制代码
+之后的步骤同 Ubuntu 第一种安装方法的3、4、5、6
+ 
+
+Anaconda 相关命令
+复制代码
+# 1.设置环境变量:下面的路径需要改成自己的 bin 文件夹所在的路径
+export PATH=~/Anaconda/anaconda3/bin:$PATH
+vim /root/.bashrc
+source /root/.bashrc
+
+# 2.查看安装版本
+conda -V
+
+# 3.查看可用包列表
+conda list # 列表有则表示安装成功
+
+# 4.查找可用版本
+conda search "^python$"
+
+
+# 5.创建新的虚拟环境
+conda create --name my_env python=3.7.3
+
+# 6.激活新环境
+source activate my_env
+
+# 7.停用环境
+source deactivate
+
+# 8.更新版本
+conda update python=3.5.2
+
+# 9.查看所有环境
+conda info --envs
+
+# 10.给环境安装其他软件包
+conda install --name my_env35 numpy
+
+# 11.删除环境变量
+conda remove --name my_env --all
+
+# 12.更新 anaconda
+conda update conda
+
+# 13.卸载Anaconda
+conda install anaconda-clean --yes
+rm -rf ~/anaconda3
+vim ~/.bashrc
+
+# 14.更换仓库镜像
+conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/free/
+conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main/
+conda config --set show_channel_urls yes
+复制代码
+ 
+
+ 
+
+ 
+
+ 
+
+                               
+
+
 - 2020年11月11日
